<resources>
    <string name="app_name">Nasor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!--constants-->
    <string name="shareView">shareView</string>
    <!--  SplashView-->
    <string name="copy_right">Copyright &#169; 2015 Simer All Rights Reserved\nPowered by JuiceShui </string>
    <string name="splash_version">V %1$s</string>
    <string name="splash_logo">Dexter</string>
    <string name="splash_des">简单的快乐</string>

    <!--  ViewControl-->
    <string name="common_loading_message">Loading...</string>
    <string name="common_empty_msg">Oops, failed to resolve data\nPlease hit the screen and try again~</string>
    <string name="common_error_msg">Oops, something wrong!\nPlease hit the screen and try again~</string>
    <string name="common_no_network_msg">No network connected!\nPlease hit the screen and try again after connecting~</string>

    <!--HomeView-->
    <string name="action_search">搜索</string>

    <!--Net-->
    <string name="load_pre_page">加载上一页</string>
    <string name="load_next_page">加载下一页</string>
    <string name="load_error">加载出错啦..TOT</string>
    <string name="convert_error">数据出错啦...TOT</string>
    <string name="nomore_data">没有更多数据啦..~-~</string>
    <string name="search_no_data">没有这个数据,换个别的吧.( ゜- ゜)つロ</string>

    <!--zhihu-->
    <string name="detail_bottom_share">分享</string>
    <string name="detail_bottom_like">点赞</string>
    <string name="detail_bottom_commit">评论</string>
    <string name="comment_expand">收起</string>

    <!--wechat-->
    <string name="action_like">收藏</string>
    <string name="action_share">分享</string>
    <string name="action_copyboard">复制链接</string>

    <!--like-->
    <string name="from_zhihu">来自 知乎</string>
    <string name="from_news">来自 新闻</string>
    <string name="from_wechat">来自 微信</string>
    <string name="from_girl">来自 妹纸</string>


    <string name="action_save">保存到本地</string>
    <string name="click_to_logo">点击头像登录~~</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--  login or register  -->
    <string name="register">注册账号</string>
    <string name="login">登录</string>
    <string name="hint_username">你的手机号/邮箱</string>
    <string name="hint_password">请输入密码</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="action_forget">忘记密码？</string>
    <string name="register_hint_phone">手机号</string>
    <string name="register_hint_code">验证码</string>
    <string name="register_hint_nick">昵称</string>
    <string name="register_hint_password">密码(6-16)</string>
    <string name="register_hint_repassword">重复密码</string>
    <string name="get_code">获取短信验证码</string>
    <string name="register_success">完成注册</string>

    <!--modify-->
    <string name="modify_avatar">头像</string>
    <string name="modify_name">昵称</string>
    <string name="modify_id">UID</string>
    <string name="modify_sex">性别</string>
    <string name="modify_birthday">生日</string>
    <string name="modify_sign">个性签名</string>
    <string name="modify_private">隐私设置</string>
    <string name="modify_safe">账号安全</string>
    <string name="modify_cancel">退出登录</string>
    <string name="modify_save">保存</string>
    <string name="modify_sex_select">性别选择</string>
    <string name="modify_sex_confirm">确定</string>
    <string name="modify_sign_hint">请输入新的个性签名</string>
    <string name="modify_name_hint">请输入新的昵称</string>

    <!--user-->
    <string name="user_no_data">╮(╯3╰)╭再怎么找也没有啦~~</string>

    <!--news -->
    <string name="news_action_share">分享</string>
</resources>
