<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <include layout="@layout/view_toolbar"/>
    <FrameLayout
        android:transitionName="@string/shareView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/rl_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_password_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_password_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_username_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_username_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_margin="@dimen/space_size_10"
        android:padding="@dimen/space_size_10"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:drawableStart="@drawable/selector_login_username"
                android:id="@+id/actv_username"
                android:drawablePadding="@dimen/space_size_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:drawableStart="@drawable/selector_login_password"
                android:drawablePadding="@dimen/space_size_10"
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector_reg_button"
                android:textStyle="italic" />
            <Button
                android:background="@drawable/selector_log_button"
                android:id="@+id/sign_in_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>