<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/view_toolbar"/>
    <!--手机号-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:inputType="phone"
        android:layout_marginTop="@dimen/space_size_10"
        android:layout_marginLeft="@dimen/space_size_10"
        android:layout_marginRight="@dimen/space_size_10"
        android:padding="@dimen/space_size_8"
        android:drawablePadding="@dimen/space_size_10"
        android:drawableStart="@drawable/icon_user_phone"
        android:id="@+id/register_et_phone"
        android:background="@drawable/edit_bg"
        android:hint="@string/register_hint_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
       android:layout_marginLeft="@dimen/space_size_15"
        android:layout_marginTop="2dp"
        android:id="@+id/register_tv_phone"
        android:visibility="invisible"
        android:textSize="@dimen/text_size_small"
        android:text="2ewewqe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--验证码-->
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3">
        <android.support.design.widget.TextInputEditText
            android:layout_marginTop="@dimen/space_size_10"
            android:layout_marginLeft="@dimen/space_size_10"
            android:layout_marginRight="@dimen/space_size_10"
            android:padding="@dimen/space_size_8"
            android:drawablePadding="@dimen/space_size_10"
            android:drawableStart="@drawable/icon_user_yanzhengma"
            android:id="@+id/register_et_code"
            android:background="@drawable/edit_bg"
            android:hint="@string/register_hint_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:padding="@dimen/space_size_8"
            android:text="@string/get_code"
            android:id="@+id/register_btn_code"
            android:layout_marginTop="@dimen/space_size_10"
            android:layout_marginLeft="@dimen/space_size_10"
            android:layout_marginRight="@dimen/space_size_10"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:visibility="invisible"
        android:layout_marginLeft="@dimen/space_size_15"
        android:layout_marginTop="2dp"
        android:id="@+id/register_tv_code"
        android:textSize="@dimen/text_size_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--昵称-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:layout_marginTop="@dimen/space_size_10"
        android:layout_marginLeft="@dimen/space_size_10"
        android:layout_marginRight="@dimen/space_size_10"
        android:padding="@dimen/space_size_8"
        android:drawablePadding="@dimen/space_size_10"
        android:drawableStart="@drawable/icon_user_username"
        android:id="@+id/register_et_nickname"
        android:background="@drawable/edit_bg"
        android:hint="@string/register_hint_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginLeft="@dimen/space_size_15"
        android:layout_marginTop="2dp"
        android:visibility="invisible"
        android:id="@+id/register_tv_nick"
        android:textSize="@dimen/text_size_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--密码-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:layout_marginTop="@dimen/space_size_10"
        android:layout_marginLeft="@dimen/space_size_10"
        android:layout_marginRight="@dimen/space_size_10"
        android:padding="@dimen/space_size_8"
        android:drawablePadding="@dimen/space_size_10"
        android:drawableStart="@drawable/icon_user_password"
        android:id="@+id/register_et_password"
        android:inputType="textPassword"
        android:background="@drawable/edit_bg"
        android:hint="@string/register_hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginLeft="@dimen/space_size_15"
        android:layout_marginTop="2dp"
        android:visibility="invisible"
        android:id="@+id/register_tv_password"
        android:textSize="@dimen/text_size_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--重复密码-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_marginTop="@dimen/space_size_10"
        android:layout_marginLeft="@dimen/space_size_10"
        android:layout_marginRight="@dimen/space_size_10"
        android:padding="@dimen/space_size_8"
        android:drawablePadding="@dimen/space_size_10"
        android:drawableStart="@drawable/icon_user_password"
        android:id="@+id/register_et_repassword"
        android:background="@drawable/edit_bg"
        android:inputType="textPassword"
        android:hint="@string/register_hint_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginLeft="@dimen/space_size_15"
        android:layout_marginTop="2dp"
        android:visibility="invisible"
        android:id="@+id/register_tv_repassword"
        android:textSize="@dimen/text_size_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/register_btn_success"
        android:text="@string/register_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>