<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/zhihuAppBarLayout"
        android:fitsSystemWindows="true"
        android:transitionName="shareView"
        android:layout_height="wrap_content">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:id="@+id/zhihuCollapsingToolbarLayouts"
            android:layout_height="@dimen/detail_image_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.ExpandedTitle"
            app:expandedTitleMargin="@dimen/extend_title_margin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <FrameLayout
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/zhihuIVHeader"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_gravity="start|bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space_size_6"
                    android:layout_marginBottom="@dimen/space_size_3"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@android:color/white"
                    android:id="@+id/zhihuTVCopyRight"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bottom_black_bg"
                    />
            </FrameLayout>
            <!--  app:popupTheme="@style/ThemeOverlay.AppCompat.Light"   设置 toolbar的弹出样式-->
            <android.support.v7.widget.Toolbar
                android:id="@+id/zhihuToolbar"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:layout_height="?attr/actionBarSize"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/zhihuNestedScrollView"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.tencent.smtt.sdk.WebView
                android:id="@+id/zhihuWebView"
                android:scrollbars="vertical"
                android:isScrollContainer="false"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/zhihuProgressBar"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:src="@drawable/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>
    <FrameLayout
        android:id="@+id/ll_detail_bottom"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_bottom_height">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:orientation="horizontal"
            >
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/tv_detail_bottom_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text"
                android:drawableTop="@mipmap/ic_daily_like"
                android:drawablePadding="3dp"
                android:text="@string/detail_bottom_like"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"/>
            <TextView
                android:id="@+id/tv_detail_bottom_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text"
                android:drawableTop="@mipmap/ic_daily_comment"
                android:drawablePadding="3dp"
                android:text="@string/detail_bottom_commit"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"/>
            <TextView
                android:id="@+id/tv_detail_bottom_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_text"
                android:drawableTop="@mipmap/ic_daily_share"
                android:drawablePadding="3dp"
                android:text="@string/detail_bottom_share"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="top"
            android:background="#e8e8e8"/>
    </FrameLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/selector_like"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/zhihuAppBarLayout"
        app:layout_anchorGravity="bottom|end" />
</android.support.design.widget.CoordinatorLayout>